--- a/contributing/config.json
+++ b/contributing/config.json
@@ -4,7 +4,7 @@
     "slug": "APEX",
     "path": "contributing/README.md",
     "title": "Contributing to Exercism",
-    "blurb": "An overview of how to contribte to Exercism"
+    "blurb": "An overview of how to contribute to Exercism"
   },
 
   {
