--- a/building/config.json
+++ b/building/config.json
@@ -396,28 +396,28 @@
   },
   {
     "uuid": "dd132018-e53d-4347-a30d-aadfe6c1743b",
-    "slug": "markdown/internal-linking.md",
+    "slug": "markdown/internal-linking",
     "path": "building/markdown/internal-linking.md",
     "title": "Internal Linking",
     "blurb": ""
   },
   {
     "uuid": "2ce5a5bf-229f-4757-9ae0-d6826494dbbf",
-    "slug": "markdown/markdown.md",
+    "slug": "markdown/markdown",
     "path": "building/markdown/markdown.md",
     "title": "Markdown Specification",
     "blurb": ""
   },
   {
     "uuid": "b2f8687f-77e1-4044-a964-35fd2bd3f1b3",
-    "slug": "markdown/style-guide.md",
+    "slug": "markdown/style-guide",
     "path": "building/markdown/style-guide.md",
     "title": "Exercism's Style Guide",
     "blurb": ""
   },
   {
     "uuid": "d34ced45-63ff-41c7-967d-3ac72e1b5d8e",
-    "slug": "markdown/widgets.md",
+    "slug": "markdown/widgets",
     "path": "building/markdown/widgets.md",
     "title": "Widgets",
     "blurb": ""
@@ -432,56 +432,56 @@
   },
   {
     "uuid": "fb41198b-90ac-4148-afcc-f012418c6396",
-    "slug": "tooling/docker.md",
+    "slug": "tooling/docker",
     "path": "building/tooling/docker.md",
     "title": "Tooling Docker Setup",
     "blurb": ""
   },
   {
     "uuid": "34387a23-f65c-490e-96ed-6b5e25298db7",
-    "slug": "tracks/concept-exercises.md",
+    "slug": "tracks/concept-exercises",
     "path": "building/tracks/concept-exercises.md",
     "title": "Concept Exercises",
     "blurb": ""
   },
   {
     "uuid": "ed318b17-01be-4868-92df-50a644adfdc7",
-    "slug": "tracks/concepts.md",
+    "slug": "tracks/concepts",
     "path": "building/tracks/concepts.md",
     "title": "Concepts",
     "blurb": ""
   },
   {
     "uuid": "2a29f722-e70d-4679-81f8-bd6727fa9013",
-    "slug": "tracks/config-json.md",
+    "slug": "tracks/config-json",
     "path": "building/tracks/config-json.md",
     "title": "config.json",
     "blurb": ""
   },
   {
     "uuid": "d951a049-a5ca-4b38-ae06-68b10cfbb2d9",
-    "slug": "tracks/practice-exercises.md",
+    "slug": "tracks/practice-exercises",
     "path": "building/tracks/practice-exercises.md",
     "title": "Practice Exercises",
     "blurb": ""
   },
   {
     "uuid": "8db530bb-e11b-4497-b088-5b4c997e09a2",
-    "slug": "tracks/presentation.md",
+    "slug": "tracks/presentation",
     "path": "building/tracks/presentation.md",
     "title": "Presentation",
     "blurb": ""
   },
   {
     "uuid": "11894561-be89-471f-ac4e-581449add2bd",
-    "slug": "tracks/README.md",
+    "slug": "tracks",
     "path": "building/tracks/README.md",
     "title": "Track",
     "blurb": ""
   },
   {
     "uuid": "0b0996c5-459c-4145-8876-09d7664d7b5c",
-    "slug": "tracks/shared-files.md",
+    "slug": "tracks/shared-files",
     "path": "building/tracks/shared-files.md",
     "title": "Shared files",
     "blurb": ""
@@ -495,28 +495,28 @@
   },
   {
     "uuid": "787e4243-b97a-4b55-9038-7667e5c3788a",
-    "slug": "tooling/analyzers/comments.md",
+    "slug": "tooling/analyzers/comments",
     "path": "building/tooling/analyzers/comments.md",
     "title": "Writing Analyzer comments",
     "blurb": ""
   },
   {
     "uuid": "58feafe7-f690-499b-a95a-97eb0d579926",
-    "slug": "tooling/analyzers/creating-from-scratch.md",
+    "slug": "tooling/analyzers/creating-from-scratch",
     "path": "building/tooling/analyzers/creating-from-scratch.md",
     "title": "Creating an Analyzer",
     "blurb": ""
   },
   {
     "uuid": "6ad41c2b-da84-49cc-ab11-2db379760585",
-    "slug": "tooling/analyzers/docker.md",
+    "slug": "tooling/analyzers/docker",
     "path": "building/tooling/analyzers/docker.md",
     "title": "Docker",
     "blurb": ""
   },
   {
     "uuid": "70960db8-c1cb-4d1b-93bc-749b72fe3ee7",
-    "slug": "tooling/analyzers/interface.md",
+    "slug": "tooling/analyzers/interface",
     "path": "building/tooling/analyzers/interface.md",
     "title": "The Analyzer Interface",
     "blurb": ""
@@ -530,28 +530,28 @@
   },
   {
     "uuid": "3cc3ce51-60e6-4ea6-9c69-ef80ad3a2607",
-    "slug": "tooling/representers/creating-from-scratch.md",
+    "slug": "tooling/representers/creating-from-scratch",
     "path": "building/tooling/representers/creating-from-scratch.md",
     "title": "Creating an Representer",
     "blurb": ""
   },
   {
     "uuid": "24bbb6d2-3943-45c1-af7a-e5254e6d3f94",
-    "slug": "tooling/representers/docker.md",
+    "slug": "tooling/representers/docker",
     "path": "building/tooling/representers/docker.md",
     "title": "Docker",
     "blurb": ""
   },
   {
     "uuid": "33d8ed70-36be-47cb-bc54-359b3787b30e",
-    "slug": "tooling/representers/interface.md",
+    "slug": "tooling/representers/interface",
     "path": "building/tooling/representers/interface.md",
     "title": "The Representer Interface",
     "blurb": ""
   },
   {
     "uuid": "ddd595f0-3e7f-44b1-ae5a-d2d23354c495",
-    "slug": "tooling/representers/normalization.md",
+    "slug": "tooling/representers/normalization",
     "path": "building/tooling/representers/normalization.md",
     "title": "Normalization within Representers",
     "blurb": ""
@@ -565,21 +565,21 @@
   },
   {
     "uuid": "7e734347-963c-4392-90b4-91c3834c8733",
-    "slug": "tooling/test-runners/creating-from-scratch.md",
+    "slug": "tooling/test-runners/creating-from-scratch",
     "path": "building/tooling/test-runners/creating-from-scratch.md",
     "title": "Creating a Test Runner",
     "blurb": ""
   },
   {
     "uuid": "82729b75-89ec-41f3-9996-41ace14c568c",
-    "slug": "tooling/test-runners/docker.md",
+    "slug": "tooling/test-runners/docker",
     "path": "building/tooling/test-runners/docker.md",
     "title": "Docker",
     "blurb": ""
   },
   {
     "uuid": "3f7fa4a3-3d4b-4305-9854-6e6ebb4fceed",
-    "slug": "tooling/test-runners/interface.md",
+    "slug": "tooling/test-runners/interface",
     "path": "building/tooling/test-runners/interface.md",
     "title": "The Test Runner Interface",
     "blurb": ""
