--- a/community/config.json
+++ b/community/config.json
@@ -29,8 +29,8 @@
   },
   {
     "uuid": "55064dce-a51b-43d2-b8ce-9777d1f39528",
-    "slug": "chestertons-fence",
-    "path": "community/chestertons-fence.md",
+    "slug": "being-a-good-community-member/chestertons-fence",
+    "path": "community/good-member/chestertons-fence.md",
     "title": "Chesterton's Fence",
     "blurb": "Learn how to express your ideas in suggestions in the best way"
   }
