Fix typo in `community/config.json`

--- a/community/config.json
+++ b/community/config.json
@@ -10,7 +10,7 @@
     "uuid": "3487dacd-f6ca-4784-b93f-c4a5d023f051",
     "slug": "administrators",
     "path": "community/administrators.md",
-    "title": "Exercism Adminstrators",
+    "title": "Exercism Administrators",
     "blurb": "Learn about Exercism's Administrators"
   },
   {
