Add more flesh to "Being a good community member" (#97)
* WIP

* WIP

* WIP

* WIP

* WIP

* WIP

* WIP

* WIP

* WIP

* WIP

* WIP

* Update community/good-member/README.md

Co-authored-by: BethanyG <BethanyG@users.noreply.github.com>

* Update community/good-member/README.md

Co-authored-by: BethanyG <BethanyG@users.noreply.github.com>

* Update community/good-member/README.md

Co-authored-by: BethanyG <BethanyG@users.noreply.github.com>

* Apply suggestions from code review

Co-authored-by: BethanyG <BethanyG@users.noreply.github.com>

* Apply suggestions from code review

Co-authored-by: Tim Austin <tim@neenjaw.com>
Co-authored-by: BethanyG <BethanyG@users.noreply.github.com>
Co-authored-by: Sascha Mann <git@mail.saschamann.eu>
Co-authored-by: Erik Schierboom <erik_schierboom@hotmail.com>

* Apply suggestions from code review

Co-authored-by: BethanyG <BethanyG@users.noreply.github.com>
Co-authored-by: Tim Austin <tim@neenjaw.com>

* Apply suggestions from code review

Co-authored-by: Tim Austin <tim@neenjaw.com>
Co-authored-by: BethanyG <BethanyG@users.noreply.github.com>

Co-authored-by: BethanyG <BethanyG@users.noreply.github.com>
Co-authored-by: Tim Austin <tim@neenjaw.com>
Co-authored-by: Sascha Mann <git@mail.saschamann.eu>
Co-authored-by: Erik Schierboom <erik_schierboom@hotmail.com>

--- a/community/config.json
+++ b/community/config.json
@@ -15,15 +15,22 @@
   },
   {
     "uuid": "7e11a8f5-e6f8-49f1-ab0c-81427fa12c5c",
-    "slug": "being-a-good-member",
-    "path": "community/being-a-good-member.md",
+    "slug": "being-a-good-community-member",
+    "path": "community/good-member/README.md",
     "title": "Being a good community member",
     "blurb": "Learn how to be a great member of the Exercism community"
   },
   {
+    "uuid": "244e2482-a0c2-446c-822d-97172acc013f",
+    "slug": "being-a-good-community-member/the-words-that-we-use",
+    "path": "community/good-member/words.md",
+    "title": "The words that we use",
+    "blurb": "Learn about why the words that we use matter so much"
+  },
+  {
     "uuid": "55064dce-a51b-43d2-b8ce-9777d1f39528",
-    "slug": "chestertons-fence",
-    "path": "community/chestertons-fence.md",
+    "slug": "being-a-good-community-member/chestertons-fence",
+    "path": "community/good-member/chestertons-fence.md",
     "title": "Chesterton's Fence",
     "blurb": "Learn how to express your ideas in suggestions in the best way"
   }
