Migrate workflow templates from ps to docs
Previous location: https://github.com/exercism/problem-specifications/tree/9b30575a999d56b217f04510846c85d825c2a057/workflows

--- a/building/config.json
+++ b/building/config.json
@@ -388,6 +388,12 @@
     "title": "Santa's Helper"
   },
   {
+    "uuid": "bbb766b6-4b28-4a19-bf57-48495b465c86",
+    "slug": "tracks/ci/workflow-templates",
+    "path": "building/tracks/ci/workflow-templates.md",
+    "title": "Workflow Templates"
+  },
+  {
     "uuid": "40e765ac-3fd1-4c17-8236-7a6e718cfe64",
     "slug": "markdown",
     "path": "building/markdown/README.md",
