--- a/building/config.json
+++ b/building/config.json
@@ -388,6 +388,19 @@
     "title": "Santa's Helper"
   },
   {
+    "uuid": "2eadb0af-4b2f-4598-a5b2-6b9cdf4a5c1b",
+    "slug": "tracks/ci",
+    "path": "building/tracks/ci/README.md",
+    "title": "Continuous Integration",
+    "blurb": "Learn about how Exercism handles Continuous Integration through GitHub Actions"
+  },
+  {
+    "uuid": "bbb766b6-4b28-4a19-bf57-48495b465c86",
+    "slug": "tracks/ci/workflow-templates",
+    "path": "building/tracks/ci/workflow-templates.md",
+    "title": "Workflow Templates"
+  },
+  {
     "uuid": "40e765ac-3fd1-4c17-8236-7a6e718cfe64",
     "slug": "markdown",
     "path": "building/markdown/README.md",
