--- a/community/config.json
+++ b/community/config.json
@@ -14,6 +14,20 @@
     "blurb": "Learn about Exercism's Administrators"
   },
   {
+    "uuid": "a19ea256-fc56-4d2e-9932-e1df7cc77b62",
+    "slug": "maintainers",
+    "path": "community/maintainers.md",
+    "title": "Exercism Maintainers",
+    "blurb": "Learn about Exercism's Maintainers"
+  },
+  {
+    "uuid": "889781a0-fc35-4faa-a093-c25e10b5cecf",
+    "slug": "contributors",
+    "path": "community/contributors.md",
+    "title": "Exercism Contributors",
+    "blurb": "Learn about Exercism's Contributors"
+  },
+  {
     "uuid": "7e11a8f5-e6f8-49f1-ab0c-81427fa12c5c",
     "slug": "being-a-good-community-member",
     "path": "community/good-member/README.md",
